@@ -83,6 +83,14 @@
 %% sympref snippet 1|0   % or true/false, on/off
 %% @end example
 %%
+%% Control default precision used by variable precision arithmetic:
+%% @example
+%% sympref digits          % get
+%% sympref digits 64       % set
+%% sympref digits default  % factory setting (32)
+%% @end example
+%% See also the @xref{digits} command.
+%%
 %% Report the version number:
 %% @example
 %% sympref version
@@ -113,6 +121,7 @@ function varargout = sympref(cmd, arg)
       settings.display = 'unicode';
       settings.snippet = true;
       settings.whichpython = '';
+      settings.digits = 32;
 
     case 'version'
       assert (nargin == 1)
@@ -126,6 +135,22 @@ function varargout = sympref(cmd, arg)
         assert(strcmp(arg, 'flat') || strcmp(arg, 'ascii') || ...
                strcmp(arg, 'unicode'))
         settings.display = arg;
+      end
+
+    case 'digits'
+      if (nargin == 1)
+        varargout{1} = settings.digits;
+      else
+        if (ischar(arg))
+          if (strcmpi(arg, 'default'))
+            arg = 32;
+          else
+            arg = str2double(arg);
+          end
+        end
+        arg = int32(arg);
+        assert(arg > 0, 'precision must be positive')
+        settings.digits = arg;
       end
 
     case 'snippet'
